--- a/src/app/components/modals/form/form.component.html
+++ b/src/app/components/modals/form/form.component.html
@@ -12,55 +12,81 @@
   </div>
   <div class="form-body">
     <form [formGroup]="forma">
-    <div class="row">
-      <div class="form-holder">
-        <div class="form-content">
+      <div class="row">
+        <div class="form-holder">
+          <div class="form-content">
             <div class="card">
-                <img
-                  class="card-img-top"
-                  height="80"
-                  width="80"
-                  style="object-fit: cover;"
-                  [src]="data.img"
-                  alt="Card image cap"
-                />
-                <div class="card-body">
-                    <div>
-                        <h5 class="card-title">{{data.name}}</h5>
-                        <h5 class="card-title text-left">${{data.price}} USD</h5>
-                    </div>
-              
-                  <p class="card-text">
-                    {{data.description | slice:0:30}}
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted"></small>
-                  </p>
-                  <p class="card-text">
-                    <label class="col-form-label">Escoja la cantidad</label>
-                    <input  min="1" type="number" value="1" formControlName="amount" class="form-control" #amount>
-                    <app-validation-errors [formulario]="forma" formControlLabel="amount">
-                    </app-validation-errors>
-                  </p>
-                  <div class="form-button mt-3 clearfix mb-2">
-                    <button
+              <img
+                class="card-img-top"
+                height="80"
+                width="80"
+                style="object-fit: cover"
+                [src]="data.img"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <div>
+                  <h5 class="card-title">{{ data.name }}</h5>
+                  <h5 class="card-title text-left">${{ data.price }} USD</h5>
+                </div>
+
+                <p class="card-text">
+                  {{ data.description | slice: 0:30 }}
+                </p>
+                <p class="card-text">
+                  <small class="text-muted"></small>
+                </p>
+                <p class="card-text">
+                  <label class="col-form-label">Escoja la cantidad</label>
+                  <input
+                    min="1"
+                    type="number"
+                    value="1"
+                    formControlName="amount"
+                    class="form-control"
+                    #amount
+                  />
+                  <app-validation-errors
+                    [formulario]="forma"
+                    formControlLabel="amount"
+                  >
+                  </app-validation-errors>
+                </p>
+                <div class="form-button mt-3 clearfix mb-2">
+                  <button
                     (click)="handleForm()"
-                      class="btn btn-outline-primary float-left"
+                    class="btn btn-outline-primary float-left"
+                  >
+                    <img
+                      src="https://static.placetopay.com/placetopay-logo.svg"
+                      class="attachment-0x0 size-0x0"
+                      width="100%"
+                      height="30"
+                      loading="lazy"
+                    />
+                  </button>
+                  <a
+                    (click)="cerrar(true)"
+                    class="btn btn-outline-success float-right"
+                    >Home</a
+                  >
+                  <ngx-spinner
+                    bdColor="rgba(51,51,51,0.8)"
+                    size="medium"
+                    color="#fff"
+                    type="ball-scale-multiple"
+                  >
                     >
-                    <img src="https://static.placetopay.com/placetopay-logo.svg" class="attachment-0x0 size-0x0" width="100%" height="30" loading="lazy">
-                    </button>
-                    <a
-                      (click)="cerrar(true)"
-                      class="btn btn-outline-success float-right"
-                      >Home</a
-                    >
-                  </div>
+                    <p style="font-size: 20px; color: white">
+                      Loading...
+                    </p></ngx-spinner
+                  >
                 </div>
               </div>
-          
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </form>
+    </form>
   </div>
 </div>
