--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -1,5 +1,7 @@
+
 <header class="container mt-5 d-flex align-items-center">
   <h1 class="mb-1">Mis Ordenes</h1>
+  <a href="javascript:void(0);" class="btn btn-outline-warning" [routerLink]="['/']"> Home </a>
 </header>
 <div class="container mt-5">
   <div class="row">
@@ -15,27 +17,24 @@
               <th scope="col">Estado</th>
               <th scope="col">Acciones</th>
             </tr>
-          </thead>
-           <ng-template *ngIf="orders.length !== 0; then data; else noData"></ng-template>
+          </thead>      
       
-      
-          <ng-template #noData>
-            <tbody>
+          
+            <tbody *ngIf="orders.length === 0;else data">
               <tr>
                 <td><h1>No hay mas Datos para mostrar</h1></td>
               </tr>            
-            </tbody>
-          </ng-template>
+            </tbody>         
       
       
           <ng-template #data>
             <tbody>
               <tr *ngFor="let customer of orders " [ngStyle]="{'height': '100px'}">
-                <th scope="row">{{customer?.id}}</th>
+                <th scope="row">{{orders}}</th>
                 <td>{{customer?.email}}</td>
                 <td>{{customer?.usuario}}</td>
-                <td>{{customer?.nombre}}</td>
-                <td>{{customer?.apellido}}</td>
+                <td>{{customer?.first_name}}</td>
+                <td>{{customer?.last_name}}</td>
                 <td>{{customer?.status}}</td>
                <!--  <td class="">
                   <a href="javascript:void(0)" (click)="btnViewUser.open(customer)"><i class="fas fa-eye"></i></a>
@@ -47,19 +46,16 @@
           </ng-template>
        
           
-        </table>
-       <!-- | pagination:page:searchUser:field
-         (click)="previousPage()"
-        {{pag}}
-        (click)="nextPage()" [disabled]="(dataCustomers | pagination:page:searchUser).length === 0" -->
+        </table>     
+         
         <ul class="pagination">
-          <li class="page-item"><button class="page-link"   style="cursor: pointer;">Previous</button></li>
-          <li class="page-item"><a class="page-link"></a></li>
-          <li class="page-item"><button class="page-link">Next</button></li>
+          <li class="page-item"><button class="page-link" (click)="previousPage()"  style="cursor: pointer;">Previous</button></li>
+          <li class="page-item"><a class="page-link">{{pag}}</a></li>
+          <li class="page-item"><button class="page-link" (click)="nextPage()" >Next</button></li>
         </ul>
-
     </div>
     
   </div>
 
 </div>
+
